PSP/examenPsp-AdrianSaavedra/RestExamen-AdrianSaavedra/src/main/java/org/example/restexamenadriansaavedra/common/errors/NotFound.java
package org.example.restexamenadriansaavedra.common.errors;

public class NotFound extends RuntimeException{
    public NotFound(String message) {
        super(message);
    }
}
